# lacuna

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  tsconfig.json
.claude/: launch.json  settings.json
.github/workflows/: docker-release.yml  tests.yml
assets/: index.html
example/: config.json
examples/: Makefile
examples/anthropic/: anthropic_example.py  claude_code.settings.json
examples/bedrock/: bedrock_example.py  claude_code.settings.json
examples/forcefield/: .env.example  README.md  claude_code.settings.json  docker-compose.yml  lacuna-config.json  smoke_test.py
examples/forcefield/gcp-cloud-run/: README.md  lacuna-config.json
examples/kubernetes/: lacuna_deployment.yaml
examples/lacuna/: lacuna.config.json
examples/serve/: main.rs  serve.config.json
examples/tailscale/: acl_grants.json
frontend/: Makefile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  apiClient.ts  main.ts  router.ts  theme.css
frontend/src/components/: BreadcrumbNav.vue  TopBar.vue
frontend/src/composables/: config.ts  info.ts  metrics.ts
frontend/src/plugins/: index.ts  vuetify.ts
frontend/src/styles/: main.scss  settings.scss  tailwind.css
src/: app.rs  auth.rs  authorization.rs  capabilities.rs  config.rs  inspecting_stream.rs  lib.rs  logging.rs  main.rs  matching.rs  metrics.rs  model_rewrite.rs  proxy_handler.rs  request_metadata.rs  serde_utils.rs  test_utils.rs  trace.rs  user_agent.rs
src/api_type/: anthropic.rs  bedrock.rs  gemini.rs  google.rs  mod.rs  openai.rs
src/api_type/anthropic/: mod.rs
src/handlers/: api.rs  health.rs  metrics.rs  mod.rs  proxy.rs  ui.rs
src/http_handlers/: api.rs  health.rs  metrics.rs  proxy.rs  ui.rs
src/http_middleware/: auth.rs  capabilities.rs  mod.rs  user_agent.rs
src/inspector/: callback.rs  content_decoder.rs  decoding_inspector.rs  mod.rs  request_inspector.rs  static_inspector.rs  stream.rs
src/model_rules/: mod.rs  rewrite.rs  rule.rs
src/provider/: authenticator.rs  compatibility.rs  manager.rs  mod.rs
tests/: examples_configs_are_valid.rs  ui.rs
(+21 files in other folders)
