[package]
name = "lacuna"
version = "0.1.2"
edition = "2024"
license = "MIT"

[lints.rust]
warnings = "deny"
missing_debug_implementations = "deny"

[dependencies]
axum = ">=0.8"
reqwest = { version = ">=0.13", features = ["json", "stream"] }
tokio = { version = ">=1", features = ["full"] }
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
json5 = ">=1"
clap = { version = ">=4", features = ["derive"] }
url = ">=2.5.8"
regex = ">=1"

[dev-dependencies]
tower = { version = ">=0.5", features = ["util"] }
