[package]
name = "lacuna"
version = "0.18.0"
edition = "2024"
license = "MIT"

[lints.rust]
warnings = "deny"
missing_debug_implementations = "deny"

[dependencies]
axum = ">=0.8"
bytes = ">=1"
futures-core = ">=0.3"
http = ">=1"
reqwest = { version = ">=0.13", features = ["json", "stream"] }
tokio = { version = ">=1", features = ["full"] }
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
json5 = ">=1"
thiserror = ">=2"
clap = { version = ">=4", features = ["derive"] }
url = ">=2.5.8"
regex = ">=1"
glob = ">=0.3"
anyhow = ">=1.0.102"
tracing = ">=0.1"
tracing-subscriber = { version = ">=0.3", features = ["json", "env-filter"] }
tower-http = { version = ">=0.6", features = ["trace", "fs"] }
metrics = ">=0.24"
metrics-exporter-prometheus = ">=0.16"
rfc2047-decoder = ">=1.1.0"
serde_with = ">=3.18.0"
aws-smithy-eventstream = ">=0.60.19"
aws-smithy-types = ">=1.4.5"
flate2 = ">=1"
async-trait = ">=0.1.89"

[dev-dependencies]
tower = { version = ">=0.5", features = ["util"] }
temp-env = ">=0.3"
